# sinauth

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
sinauth/: config.py  main.py  models.py  permissions.py  security.py  storage.py
sinauth/web/: app.js  index.html  snw.lib.js  styles.css
tests/: test_output_models.py  test_permissions.py  test_security.py  test_security_probes.py  test_service_requests.py  test_storage.py
